unpackaged/main/default/objects/CMPL123TMS__Quiz__c/CMPL123TMS__Quiz__c.object-meta.xml
<CustomObject>
    <description>Quiz related to Documents and Course in Library.</description>
    <label>Quiz</label>
    <nameField>
        <displayFormat>QZ-{0000}</displayFormat>
        <label>Quiz ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>