unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Key_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Key_Value__c</fullName>
        <label>Key Value</label>
        <type>TextArea</type>
    </CustomField>