unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Library__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Library</label>
        <referenceTo>CMPL123TMS__Library__c</referenceTo>
        <relationshipLabel>Quizzes</relationshipLabel>
        <relationshipName>Quizzes</relationshipName>
        <type>Lookup</type>
    </CustomField>