unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Number_of_Questions_Asked__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Number_of_Questions_Asked__c</fullName>
        <label>Number of Questions Asked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>