unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Passing_Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Passing_Score__c</fullName>
        <label>Passing Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>