unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Quiz_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Name__c</fullName>
        <label>Quiz Name</label>
        <type>TextArea</type>
    </CustomField>