unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Quiz_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Number__c</fullName>
        <label>Quiz Number</label>
        <required>true</required>
        <type>TextArea</type>
    </CustomField>