unpackaged/main/default/objects/CMPL123TMS__Quiz__c/fields/CMPL123TMS__Quiz_Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Version__c</fullName>
        <label>Quiz Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>